fixes layout issue for search menu (#317)

--- a/src/groups/TopMenu/SearchMenu/SearchMenu.scss
+++ b/src/groups/TopMenu/SearchMenu/SearchMenu.scss
@@ -43,7 +43,7 @@
     background: white;
     border: 1px solid $border-color;
     border-top: none;
-    margin-top: 42px;
+    margin-top: 39px;
     padding: 0px 10px 10px 10px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
